--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,7 @@ languages:
 disqusShortname: dereksth
 
 # GA Tracking ID
-googleAnalytics: G-HBKZ06TDH1
+googleAnalytics: G-W7XQFK7MD1
 
 # Theme i18n support
 # Available values: ar, bn, ca, de, el, en, es, fr, hu, id, it, ja, ko, nl, pt-br, th, uk, zh-cn, zh-hk, zh-tw
