--- a/config.yaml
+++ b/config.yaml
@@ -38,7 +38,7 @@ params:
         - post
     featuredImageField: image
     rssFullContent: true
-    favicon:
+    favicon: img/favicon.png
 
     footer:
         since: 2020
